2003-12-27  Martin Mares  <mj@ucw.cz>

	* lspci.c: Devices in domains different from 0 have their slot number
	printed as "<domain>:<bus>:<slot>.<func>".

	* lib/filter.c: Slot filters understand domains.

	* lib/generic.c: Mention the domain in slot numbers in all error messages.

	* lib/internal.h: The #ifdef for Linux <asm/byteorder.h> was wrong.

	* lib/access.c (pci_get_dev): Added support for domains.

	* lib/sysfs.c (sysfs_scan): Read vendor and device ID from the config
	registers (or to be precise, leave it for the generic parts of the pcilib
	to do so) instead of reading them from the sysfs. It's faster this way.

	* lspci.c (show_pcix): Don't touch pci_dev->hdrtype, it's an internal
	variable. Better read it from the config registers (it's cached anyway).

	* lib/sysfs.c (sysfs_scan), lib/proc.c (proc_scan): Don't read the hdrtype.
	  lib/generic.c (pci_generic_fill_info): If hdrtype is -1 (unset), read it.
	  Saves lots of unnecessary file accesses.

	* lib/pci.h (PCIADDR_PORT_FMT): Use %llx instead of %Lx, because the latter
	is not supported by all C libraries.

	* Makefile: Always enter the lib directory (remember that we don't have
	full dependecies for the library in the top-level Makefile; hmmm, another
	thing to rewrite some day).

	* lib/sysfs.c: Added Linux sysfs access method based on the patch
	written by Matthew Wilcox <willy@fc.hp.com>.

	* lib/proc.c: Renamed the access method name from "/proc/bus/pci" to "Linux-proc".

	* lib/pread.h: The hacks to support pread on various versions
	of Linux libc moved there.

	* lib/proc.c (proc_setup): The return value of snprintf() varies
	between glibc versions, so we need to check both for a negative
	values and for too large values.

	* Removed last few references to the "Linux PCI Utilities", the
	package is pretty cross-platform now :)

2003-12-27  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test2.

	* README, pciutils.lsm, pciutils.spec: Use @VERSION@ to make the