@@ -44,7 +44,7 @@ itself.
 Show hexadecimal dump of whole PCI configuration space. Available only for root
 as several PCI devices
 .B crash
-when you try to read undefined portions of the config space (this behaviour probably
+when you try to read undefined portions of the config space (this behavior probably
 doesn't violate the PCI standard, but it's at least very stupid).
 .TP
 .B -b
@@ -55,16 +55,18 @@ PCI bus instead of as seen by the kernel.
 Show a tree-like diagram containing all buses, bridges, devices and connections
 between them.
 .TP
-.B -s [[<bus>]:][<slot>][.[<func>]]
-Show only devices in specified bus, slot and function. Each component of the device
-address can be omitted or set as "*" meaning "any value". All numbers are
+.B -s [[[[<domain>]:]<bus>]:][<slot>][.[<func>]]
+Show only devices in the specified domain (in case your machine has several host bridges,
+they can either share a common bus number space or each of them can address a PCI domain
+of its own; domains are numbered from 0 to ffff), bus (0 to ff), slot (0 to 1f) and function (0 to 7).
+Each component of the device address can be omitted or set to "*", both meaning "any value". All numbers are
 hexadecimal.  E.g., "0:" means all devices on bus 0, "0" means all functions of device 0
 on any bus, "0.3" selects third function of device 0 on all buses and ".4" shows only
-fourth function of each device.
+the fourth function of each device.
 .TP
 .B -d [<vendor>]:[<device>]
 Show only devices with specified vendor and device ID. Both ID's are given in
-hexadecimal and may be omitted or given as "*" meaning "any value".
+hexadecimal and may be omitted or given as "*", both meaning "any value".
 .TP
 .B -i <file>
 Use
@@ -82,18 +84,16 @@ Dump PCI device data in machine readable form (both normal and verbose format su
 for easy parsing by scripts.
 .TP
 .B -M
-Invoke bus mapping mode which scans the bus extensively to find all devices including
-those behind misconfigured bridges etc. Please note that this is intended only for
-debugging and as it can crash the machine (only in case of buggy devices, but
-unfortunately these happen to exist), it's available only to root. Also using
--M on PCI access methods which don't directly touch the hardware has no
-sense since the results are (modulo bugs in lspci) identical to normal listing
-modes.
+Invoke bus mapping mode which performs a thorough scan of all PCI devices, including
+those behind misconfigured bridges etc. This option is available only to root and it
+gives meaningful results only if combined with direct hardware access mode (otherwise
+the results are identical to normal listing modes, modulo bugs in lspci). Please note
+that the bus mapper doesn't support PCI domains and scans only domain 0.
 .TP
 .B --version
 Shows 
 .I lspci
-version. This option should be used standalone.
+version. This option should be used stand-alone.
 
 .SH PCILIB OPTIONS
 The PCI utilities use PCILIB (a portable library providing platform-independent
@@ -115,7 +115,7 @@ Use direct hardware access via Intel configuration mechanism 1. (i386 and compat
 .B -H2
 Use direct hardware access via Intel configuration mechanism 2. Warning: This method
 is able to address only first 16 devices on any bus and it seems to be very
-unrealiable in many cases. (i386 and compatible only)
+unreliable in many cases. (i386 and compatible only)
 .TP
 .B -F <file>
 Extract all information from given file containing output of lspci -x. This is very
@@ -138,7 +138,8 @@ kernels. Contains per-bus subdirectories with per-card config space files and a
 file containing a list of all PCI devices.
 
 .SH SEE ALSO
-.BR setpci (8), update-pciids (8)
+.BR setpci (8),
+.BR update-pciids (8)
 
 .SH AUTHOR
 The PCI Utilities are maintained by Martin Mares <mj@ucw.cz>.
