@@ -41,7 +41,7 @@ operations does before you actually execute it.
 .B --version
 Shows
 .I setpci
-version. This option should be used standalone.
+version. This option should be used stand-alone.
 
 
 .SH DEVICE SELECTION
@@ -49,16 +49,18 @@ version. This option should be used standalone.
 Before each sequence of operations you need to select which devices you wish that
 operation to affect.
 .TP
-.B -s [[<bus>]:][<slot>][.[<func>]]
-Select devices in specified bus, slot and function. Each component of the device
-address can be omitted or set as "*" meaning "any value". All numbers are
+.B -s [[[[<domain>]:]<bus>]:][<slot>][.[<func>]]
+Show only devices in the specified domain (in case your machine has several host bridges,
+they can either share a common bus number space or each of them can address a PCI domain
+of its own; domains are numbered from 0 to ffff), bus (0 to ff), slot (0 to 1f) and function (0 to 7).
+Each component of the device address can be omitted or set to "*", both meaning "any value". All numbers are
 hexadecimal.  E.g., "0:" means all devices on bus 0, "0" means all functions of device 0
-on any bus, "0.3" selects third function of device 0 on all busses and ".4" selects only
-fourth function of each device.
+on any bus, "0.3" selects third function of device 0 on all buses and ".4" shows only
+the fourth function of each device.
 .TP
 .B -d [<vendor>]:[<device>]
 Select devices with specified vendor and device ID. Both ID's are given in
-hexadecimal and may be omitted or given as "*" meaning "any value".
+hexadecimal and may be omitted or given as "*", both meaning "any value".
 
 .SH OPERATIONS
 .PP
@@ -180,7 +182,7 @@ Use direct hardware access via Intel configuration mechanism 1. (i386 and compat
 .B -H2
 Use direct hardware access via Intel configuration mechanism 2. Warning: This method
 is able to address only first 16 devices on any bus and it seems to be very
-unrealiable in many cases. (i386 and compatible only)
+unreliable in many cases. (i386 and compatible only)
 .TP
 .B -F <file>
 Extract all information from given file containing output of lspci -x. This is very
